fix(components): readjust font sizes and compose components
Previously, the heading font sizes were too large meaning other
components looked out of place. The font sizes have now been reduced
across all components and the heading tags are now a more appropriate
font size so they can be used to compose them inside of other elements.

Font sizes and weights have been removed from theme components as they
are now applied by using the correct typographical elements such as
headings and strong tags.

A new class of `text-weaker` has been added to provide a lighter
font-weight in case elements require a thinner font.

The `content` list group container has been refactored to have the
heading use a `h3` with a `text-weaker` class applied to deliver the
previous style.

The `media` list group container has been refactored to have all font
styles and weights removed and use standard components to compose the
example.

The `panel` containers have been refactored to have the font style and
weights removed and use standard components to style.

The example `index.html` page has had custom styles applied to the
example headings as they were not compatible with the theme heading
styles. Each example heading is now wrapped in a `page-title` class
which is styled by the `page.css` file specific to the example.

The bootstrap `panel` component had a hard coded font-size on
`panel-title` which meant that ensuring it fit within the theme
and the composition of elements was impossible.

A new overrides directory has been created to allow overriding any core
bootstrap components that would be overwritten in a bower install.

The bootstrap `panel` component is now being overridden so will no
longer be updated to the latest version when doing a bower install.

The version of bootstrap has been updated to `3.3.1`

--- a/variables.less
+++ b/variables.less
@@ -44,16 +44,17 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          15px;
+@font-size-base:          14px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
-@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
+@font-size-small:         ceil((@font-size-base * 0.88)); // ~13px
+@font-size-tiny:          11px;
 
-@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
-@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
-@font-size-h5:            @font-size-base;
-@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
+@font-size-h1:            26px; //floor((@font-size-base * 1.74)); // ~26px
+@font-size-h2:            20px; //floor((@font-size-base * 1.35)); // ~20px
+@font-size-h3:            17px; //ceil((@font-size-base * 1.15)); // ~17px
+@font-size-h4:            15px; //ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h5:            @font-size-small;
+@font-size-h6:            @font-size-tiny;
 
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.428571429; // 20/14
@@ -62,7 +63,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    @font-family-base;
-@headings-font-weight:    300;
+@headings-font-weight:    400;
 @headings-line-height:    1.1;
 @headings-color:          inherit;
 
@@ -821,7 +822,7 @@
 //** Blockquote small color
 @blockquote-small-color:      @gray;
 //** Blockquote font size
-@blockquote-font-size:        (@font-size-base * 1.25);
+@blockquote-font-size:        @font-size-base;
 //** Blockquote border color
 @blockquote-border-color:     @gray-lighter;
 //** Page header border color
